# CodeBread

./: .gitignore  LICENSE  README.md  SECURITY.md  codebread.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
codebread/: __init__.py  analyzer.py  classifier.py  cli.py  connections.py  deobfuscate.py  diff.py  export.py  languages.py  models.py  scanner.py  server.py
codebread/parsers/: __init__.py  generic_parser.py  javascript_parser.py  python_parser.py
codebread/web/: app.js  index.html  style.css
tests/: conftest.py  test_analyzer.py  test_config_parser.py  test_connections.py  test_deobfuscate.py  test_generic_parser.py  test_javascript_parser.py  test_python_parser.py  test_scanner.py  test_server.py  test_version.py
tests/fixtures/csharp/: UsersController.cs
tests/fixtures/go/: sample.go
tests/fixtures/java/: UserController.java
tests/fixtures/javascript/: sample_express.js  sample_types.ts
tests/fixtures/php/: users.php
tests/fixtures/python/: sample_flask.py
tests/fixtures/ruby/: users_controller.rb
tests/fixtures/sql/: schema.sql
tests/fixtures/vue/: sample.vue
